# chemap

./: .gitignore  README.md  pyproject.toml  smiles.csv
.github/workflows/: CI_first_code_checks.yml  CI_publish.yaml  tests.yml
chemap/: __init__.py  data_loader.py  fingerprint_computation.py  fingerprint_conversions.py  fingerprint_statistics.py  metrics.py  visualizations.py
chemap/additional_fingerprints/: __init__.py  element_count_fp.py
src/: approx_nn.py  fingerprint_computation.py  map4neo.py  mbp.py  metrics.py  utils.py  visualizations.py
tests/: test_fingerprint_computation.py  test_fingerprint_conversions.py  test_fingerprint_generators.py  test_fingerprint_statistics.py  test_metrics.py
