[project]
name = "chemap"
version = "0.1.0"
description = "Library for computing molecular fingerprint based similarities as well as dimensionality reduction based chemical space visualizations. "
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "map4>=1.1.3",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "rdkit>=2024.9.6",
    "scipy>=1.15.2",
    "scikit-fingerprints",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]
